tests/snapshots/spanshot_request@3124238761969817880.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: Keep, allow_ref_pat_on_ref_mut: true, simplify_expressions: true, eat_two_layers: false, eat_inherited_ref_alone: true }"
---
Query: `[&mut x]: &[&mut T]`

[&mut x] @ p: &[&mut T]
// Applying rule `ConstructorRef`
&mut x @ &(*p).0: &&mut T
// ERROR: no rules applies to &mut x @ &(*p).0: &&mut T
