tests/snapshots/spanshot_request@3275851156981054970.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
  request: "[&x]: &[&T]"
---
[&x] @ p: &[&T]
// Applying rule `ConstructorRef`
&x @ &(*p).0: &&T
// Applying rule `Deref`
x @ *&(*p).0: &T

// Final bindings (simplified):
let x: &T = (*p).0
