tests/snapshots/spanshot_request@327954641036515242.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
    downgrade_shared_inside_shared: false
  request: "[x]: &mut &mut [T]"
---
[x] @ p: &mut &mut [T]
// Applying rule `ConstructorMultiRef`
[x] @ &mut **p: &mut [T]
// Applying rule `ConstructorRef`
x @ &mut (*&mut **p).0: &mut T

// Final bindings (simplified):
let x: &mut T = &mut (**p).0
