tests/snapshots/spanshot_request@3407228641243468044.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_expr: AllocTemporary, allow_ref_pat_on_ref_mut: false, simplify_expressions: true }"
---
Query: `&[[&x]]: &[&mut [T]]`

&[[&x]] @ p: &[&mut [T]]
// Applying rule `Deref`
[[&x]] @ *p: [&mut [T]]
// Applying rule `Constructor`
[&x] @ (*p).0: &mut [T]
// Applying rule `ConstructorRef`
&x @ &mut (*(*p).0).0: &mut T
// ERROR: no rules applies to &x @ &mut (*(*p).0).0: &mut T
